# MAGIE

./: .gitignore  README.md  email_template.html  email_templates  logos  pyproject.toml  todo.md
.github/workflows/: test.yml
Data/: CHAOS-8.1.mat
Development_Code/: live_line_plots.py  live_plot_lemi427.py  magpy_K.ipynb
Development_Code/MARTAS_Protocols/: lemi018protocol.py  lemi417protocol.py
binder/: environment-alerts.yml  environment.yml  environment_alerts.yml
live_scripts/: alerts.py  clean_alert_log.py  daily_k.py  email_config_example.toml  mastodon_config_example.toml  single_iaga_conversion.py
notebooks/: FLO_live_data_wrapper.py  Plot_data.ipynb  download_tutorial.ipynb  finalised_k_tutorial.ipynb  live_k_index.ipynb  magnetometer_map.ipynb  provisonal_k_tutorial.ipynb
src/MAGIE/: Data_Download.py  Rotate2Geo.py  __init__.py  k_index.py
src/magie/: Averaging.py  Data_Download.py  Data_Processing.py  FLO_live_data_wrapper.py  Filename_tools.py  Plots.py  Plotting_Tools.py  Rotate2Geo.py  __init__.py  animate_png.py  email_utils.py  file_conversions.py  k_index.py  k_index_magpy.py  legacy_alert.py  legacy_kindex.py  magnetometer_status_map.py  site_thresholds.json  site_warnings.py  utils.py
src/magie/assets/email_templates/: magnetometer_outage.html  magnetometer_restored.html
tests/: test_import.py
