[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "magie"                       # pip name; usually lower-case
version = "0.1.0"
description = "K-index and magnetometer tools for MagIE."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "GNU General Public License v3" }


authors = [
  { name = "Simon Walker", email = "simon.walker@dias.ie" },
]

dependencies = [
  "numpy>=2.3.5",
  "pandas>=2.3.3",
  "scipy>=1.16.2",
  "matplotlib>=3.10.6",
  "tqdm>=4.67.1",
  "tables>=3.10.2",
]

[project.optional-dependencies]
test = [
  "pytest>=8.3.0",
]

[project.urls]
homepage = "https://github.com/08walkersj/MAGIE"
repository = "https://github.com/08walkersj/MAGIE"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
