[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "magie"                       # pip name; usually lower-case
version = "0.1.0"
description = "K-index and magnetometer tools for MagIE."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "GNU General Public License v3" }


authors = [
  { name = "Simon Walker", email = "simon.walker@dias.ie" },
]

dependencies = [
  "numpy>=1.26.4",
  "pandas>=2.3.3",
  "scipy>=1.16.2",
  "matplotlib>=3.10.6",
  "tqdm>=4.67.1",
  "tables>=3.10.2",
  "tomli>=2.0.1",
  "joblib>=1.2.0",
  "requests>=2.31.0",
  # Temporary: upstream fix not yet released on PyPI
  "geomagpy @ git+https://github.com/geomagpy/magpy.git@c10bfb3a8d03587de4b80ff70d821c4e19aa5066",

]

[project.optional-dependencies]
test = [
  "pytest>=8.3.0",
]
alerts = ["mastodon.py>=2.1.4"
]
[project.urls]
homepage = "https://github.com/magie-network/MAGIE"
repository = "https://github.com/magie-network/MAGIE"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
magie = ["*.json"]
"magie.assets" = ["*.png", "*.jpg"]
"magie.assets.logos" = ["*.png", "*.jpg"]
